---------------------------------------------------------------------------------------------------
Version: 20.2.8
Date: 2022-08-XXX
  Features:
  Changes:
  Bugfixes:
    - Version numbers back on track. Last 2 versions were released under an old minor version number.
  Info:
---------------------------------------------------------------------------------------------------
Version: 20.2.7
Date: 2022-08-20
  Features:
  Changes:
  Bugfixes:
    - Fire Place mod is optional as intended (no errors on startup if missing).
    - Camp Fire can't be opened by players.
  Info:
---------------------------------------------------------------------------------------------------
Version: 20.2.6
Date: 2022-08-20
  Features:
    - Added mode: Battlefluffy Scenario
  Changes:
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 20.2.5
Date: 2022-06-24
  Features:
    - JD Spider Race - Has been modified for play testing with a reduced spider. See readme/mod description for details. These changes will be reverted/balanced in future main releases.
  Changes:
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 20.2.4
Date: 2022-06-16
  Features:
  Changes:
    - JD Spider Race - Player Manager shows how many total players are online for each team. Doesn't update on players joining/leaving server as this would interfear with admins trying to assign players to teams as large parts of the GUI reload at once.
    - JD Spider Race - Player Manager, when selecting a player's name button it now highlighs the button in bold as well as the name appearing at the bottom middle of the GUI. So its more obvious who has been selected.
  Bugfixes:
    - JD Spider Race - Handle offline players being assigned to an initial team and moved between teams. Errored and crashed before.
  Info: