@@ -18,7 +18,7 @@ local OnScriptTriggerEffectEvent = function(event)
             orientation = 0.5,
             scale = 0.3,
             intensity = 0.3,
-            minimum_darkness = 0.3,
+            minimum_darkness = 0.2,
             oriented = true,
             color = ExplosionColor,
             target = event.source_entity,
