@@ -3,6 +3,8 @@ Version: 20.2.8
 Date: 2022-08-XXX
   Features:
   Changes:
+    - Battlefluffy - lamps turn on at lower light levels, so they are on over dusk rather than sometimes being post dusk.
+    - Battlefluffy - all light effects start when the map is only a litle bit dark, so while still slightly brighted than vanilla Factorio.
   Bugfixes:
     - Version numbers back on track. Last 2 versions were released under an old minor version number.
   Info:
